# vip

./: CMakeLists.txt  PKGBUILD  README.md  key.cpp  key.h  keyboard.cpp  keyboard.h  layout.json  main.cpp  resources.qrc
config/: layout.json
